# braillePatternDots-rust

./: Cargo.toml  README.md
src/: lib.rs
tests/: braille.rs
